src/components/global.css
@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One&display=swap");
/* :root {
  --mobileS: 320px;
  --mobileM: 376px;
  --mobileL: 424px;
  --tablet:  768px;
  --laptop:  1024px;
  --laptopL: 1440px;
  --desktop: 2560px;
} */


*,
*::before,
*::after {
  margin: 0;
  border: 0;
  padding: 0;
  line-height: 1.5;
  list-style: none;
  text-decoration: none;
  box-sizing: border-box;
  overflow-wrap: break-word;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 100%;
  height: 100%;
  font-size: 16px;
  font-display: swap;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
  width: 100%;
}

img {
  width: 100%;
  height: auto;
}

h1,
h2,
h3,
h4 {
  font-family: "Patua One", serif;
  letter-spacing: 2px;
  text-align: center;
  text-transform: capitalize;
}

h1 {
  font-size: 2rem;
}

h2 {
  border-top: 2px solid black;
  border-top-width: 60%;
}

label,
.submit {
  font-size: 2rem;
  text-transform: capitalize;
}

p {
  letter-spacing: 2px;
  word-spacing: 0.25rem;
  margin-bottom: .5rem;
  font-size: 1rem;
  padding: .5rem;
}

a {
  text-decoration: none;
  color: black;
  font-weight: bold;
}

input,
textarea {
  font-size: 1rem;
  width: 100%;
  background: lightgray;
  border-bottom: 0.5rem solid black;
}

